--- a/styles/layout.css
+++ b/styles/layout.css
@@ -25,54 +25,90 @@ header{
 }
 #banner{
   grid-column:1/3;
-  background:green
+
+ 
 }
 #slider{
   grid-column:1/3;
-  background:red
+  margin-left:75px;
+  margin-right:75px
 }
 #propertyTrade{
   grid-column:1/3;
-  background:yellow
+  margin-left:75px;
+  margin-right:75px;
+ 
+  
+  
 }
 #propertyInvest{
   grid-column:1/3;
+  margin-left:75px;
+  margin-right:75px
 }
 #defi{
   grid-column:1/3;
+  margin-left:75px;
+  margin-right:75px
 }
 #cryptoBot{
   grid-column:1/3;
+  margin-left:75px;
+  margin-right:75px;
+
 }
 #pfxAffiliate{
   grid-column:1/3;
+  margin-left:75px;
+  margin-right:75px
 }
 #how1{
   grid-column:1/3;
+  margin-left:75px;
+  margin-right:75px
 }
 #productCategories{
   grid-column:1/3;
+  margin-left:75px;
+  margin-right:75px
 }
 #affiliateProgram{
   grid-column:1/3;
+  margin-left:75px;
+  margin-right:75px
 }
 #how2{
   grid-column:1/3;
+  margin-left:75px;
+  margin-right:75px
 }
 #activate{
   grid-column:1/3;
+  margin-left:75px;
+  margin-right:75px
 }
 
 #paidAffiliate{
   grid-column:1/3;
+  margin-left:75px;
+  margin-right:75px
 }
 #trusted{
   grid-column:1/3;
+  margin-left:75px;
+  margin-right:75px
 }
 #contact{
   grid-column:1/3;
+  margin-left:75px;
+  margin-right:75px
 }
 footer{
   grid-column:1/3;
+  margin-left:75px;
+  margin-right:75px
 }
   
+#heroImage{
+  background:url('/images/banner.png')
+}
