--- a/styles/layout.css
+++ b/styles/layout.css
@@ -65,7 +65,8 @@ header{
 #how1{
   grid-column:1/3;
   margin-left:75px;
-  margin-right:75px
+  margin-right:75px;
+
 }
 #productCategories{
   grid-column:1/3;
