--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,5 +4,9 @@
 @tailwind utilities;
 
 .btn {
-    @apply font-semibold border-2 py-3 px-8 rounded-md  text-xs  cursor-pointer tracking-wider border-brandGreen;
+    @apply font-semibold border-2 py-3 px-8 rounded-md  text-xs  cursor-pointer tracking-wider ;
+}
+
+.footer-item{
+    @apply flex justify-start pb-1 text-gray-400 cursor-pointer hover:text-brandYellow font-semibold;
 }
