--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,25 +1,23 @@
 
 .body{
-  color: #fff;
+  
   font-family: 'Nunito Semibold';
   text-align: center;
 }
 #content{
   display: grid;
   grid-template-columns: repeat(2,1fr);
-  grid-auto-rows: minmax(100px,auto);
+  grid-auto-rows: minmax(10px,auto);
 	max-width:100%;
   margin: 0 auto;
  
        
 }
-/* .content > *{
-  background: #3bbced;
- 
-} */
+
 
 header{
   grid-column:1/3;
+ 
 
   
 }
@@ -101,8 +99,11 @@ header{
 }
 #contact{
   grid-column:1/3;
-  margin-left:75px;
-  margin-right:75px
+  padding:75px;
+ 
+  background: #F9F9F9;
+  border-bottom: 2px solid #C8C8C8;
+
 }
 footer{
   grid-column:1/3;
