--- a/styles/layout.css
+++ b/styles/layout.css
@@ -3,10 +3,11 @@
   
   font-family: 'Nunito Semibold';
   text-align: center;
+  
 }
 #content{
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  /* grid-template-columns: repeat(2,1fr); */
   grid-auto-rows: minmax(10px,auto);
 	max-width:100%;
   margin: 0 auto;
@@ -106,7 +107,7 @@ header{
 
 }
 footer{
-  grid-column:1/3;
+  /* grid-column:1/3; */
   margin-left:75px;
   margin-right:75px
 }
