--- a/styles/layout.css
+++ b/styles/layout.css
@@ -34,8 +34,8 @@ header{
 }
 #propertyTrade{
   grid-column:1/3;
-  margin-left:75px;
-  margin-right:75px;
+  /* margin-left:75px;
+  margin-right:75px; */
  
   
   
