--- a/styles/layout.css
+++ b/styles/layout.css
@@ -47,24 +47,24 @@ header{
 }
 #defi{
   grid-column:1/3;
-  margin-left:75px;
-  margin-right:75px
+  /* margin-left:75px;
+  margin-right:75px */
 }
 #cryptoBot{
   grid-column:1/3;
-  margin-left:75px;
-  margin-right:75px;
+  /* margin-left:75px;
+  margin-right:75px; */
 
 }
 #pfxAffiliate{
   grid-column:1/3;
-  margin-left:75px;
-  margin-right:75px
+  /* margin-left:75px;
+  margin-right:75px */
 }
 #how1{
   grid-column:1/3;
-  margin-left:75px;
-  margin-right:75px;
+  /* margin-left:75px;
+  margin-right:75px; */
 
 }
 #productCategories{
@@ -74,8 +74,8 @@ header{
 }
 #affiliateProgram{
   grid-column:1/3;
-  margin-left:75px;
-  margin-right:75px
+  /* margin-left:75px;
+  margin-right:75px */
 }
 #how2{
   grid-column:1/3;
@@ -100,7 +100,7 @@ header{
 }
 #contact{
   grid-column:1/3;
-  padding:75px;
+  /* padding:75px; */
  
   background: #F9F9F9;
   border-bottom: 2px solid #C8C8C8;
