--- a/styles/layout.css
+++ b/styles/layout.css
@@ -29,8 +29,8 @@ header{
 }
 #slider{
   grid-column:1/3;
-  margin-left:75px;
-  margin-right:75px
+  /* margin-left:75px;
+  margin-right:75px */
 }
 #propertyTrade{
   grid-column:1/3;
@@ -69,8 +69,8 @@ header{
 }
 #productCategories{
   grid-column:1/3;
-  margin-left:75px;
-  margin-right:75px
+  /* margin-left:75px;
+  margin-right:75px */
 }
 #affiliateProgram{
   grid-column:1/3;
@@ -79,25 +79,21 @@ header{
 }
 #how2{
   grid-column:1/3;
-  margin-left:75px;
-  margin-right:75px
+  /* margin-left:75px;
+  margin-right:75px */
 }
 #activate{
   grid-column:1/3;
-  margin-left:75px;
-  margin-right:75px
+  /* margin-left:75px;
+  margin-right:75px */
 }
 
 #paidAffiliate{
   grid-column:1/3;
-  margin-left:75px;
-  margin-right:75px
+  /* margin-left:75px;
+  margin-right:75px */
 }
-#trusted{
-  grid-column:1/3;
-  margin-left:75px;
-  margin-right:75px
-}
+
 #contact{
   grid-column:1/3;
   /* padding:75px; */
@@ -107,9 +103,10 @@ header{
 
 }
 footer{
-  /* grid-column:1/3; */
+  grid-column:1/3;
   margin-left:75px;
-  margin-right:75px
+  margin-right:75px;
+  
 }
   
 #heroImage{
@@ -118,8 +115,8 @@ footer{
 
 #trusted{
   grid-column:1/3;
-  margin-left:75px;
-  margin-right:75px
+  /* margin-left:75px;
+  margin-right:75px */
 }
 
 #firstBody{
